# ezcc

./: .gitignore  CMakeLists.txt  README.md
cmake/: ezcc_com.cmake
core/: CMakeLists.txt  lexer.cpp  lexer.hpp  main.cpp  parser.hpp
